--- a/index.html
+++ b/index.html
@@ -6,16 +6,21 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>portfolio</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+    rel="stylesheet">
   <style>
     /* Critical CSS to prevent FOUC */
     html.dark body {
-      background-color: #202124;
-      color: #E8EAED;
+      background-color: #050505;
+      color: #ffffff;
     }
 
     html:not(.dark) body {
-      background-color: #ffffff;
-      color: #202124;
+      background-color: #f8fafc;
+      color: #0f172a;
     }
   </style>
   <script>
